--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,10 +16,34 @@
 </head>
 
 <body>
+    <div id="main-wrapper" class="container-fluid">
+        <div class="row">
+            <div class="col"></div>
+            <div class="col" id="header">
+                <h1>Avengers Trivia Game</h1>
+            </div>
+            <div class="col"></div>
+        </div>
 
-    
+        <div class="row">
+            <div class="col"></div>
+            <div class="col" id="trivia-body">
+                <button class="btn btn-outline-warning" id="start-button">Start Game</button>
+            </div>
+            <div class="col"></div>
+        </div>
+
+
+
+
+
+
+
+    </div>
+
 
 
     <script src="assets/javascript/app.js"></script>
 </body>
+
 </html>
