--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div class="row">
             <div class="col"></div>
-            <div class="col" id="trivia-body">
+            <div class="col" id="start">
                 <button class="btn btn-outline-warning" id="start-button">Start Game</button>
             </div>
             <div class="col"></div>
