Updating, then creating another branch for live page later.

--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
 
 <body>
     <div id="main-wrapper" class="container-fluid">
-        <div class="row">
+        <div class="row" id="top">
             <div class="col"></div>
-            <div class="col" id="header">
+            <div class="col-lg-6" id="header">
                 <h1>Avengers Trivia Game</h1>
+                <div id="counter"></div>
             </div>
             <div class="col"></div>
         </div>
 
-        <div class="row">
+        <div class="row" id="bottom">
             <div class="col"></div>
-            <div class="col" id="start">
+            <div class="col-lg-6" id="start">
                 <button class="btn btn-outline-warning" id="start-button">Start Game</button>
             </div>
             <div class="col"></div>
